--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,23 +1,41 @@
 # This workflow will build a golang project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
 
-name: Go CI
+name: Go CI/CD
 
 on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
+    tags:
+      - 'v*'  # Runs release job only on version tags like v1.0.0
 
 jobs:
-  test:
-    name: Run Tests
-    runs-on: Debian-12
+  security-check:
+    name: Scan for Secrets
+    runs-on: debian-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Scan for Secrets with TruffleHog
+        uses: trufflesecurity/trufflehog@v3
+        with:
+          path: .
+          base: origin/main
+
+      - name: Fail if Secrets Found
+        run: echo "Secrets detected! Fix before releasing." && exit 1
+        if: failure()
+
+  build:
+    name: Build and Test
+    runs-on: ubuntu-latest
+    needs: security-check  # Runs only if security check passes
+
+    steps:
+      - name: Checkout Repository
         uses: actions/checkout@v4
 
       - name: Set up Go
@@ -25,35 +43,33 @@ jobs:
         with:
           go-version: stable
 
-      - name: Cache Go modules
-        uses: actions/cache@v3
-        with:
-          path: ~/go/pkg/mod
-          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-          restore-keys: |
-            ${{ runner.os }}-go-
+      - name: Install Dependencies
+        run: go mod tidy
 
-      - name: Install dependencies
+      - name: Run Tests
+        run: go test ./...
+
+      - name: Build Project
+        run: go build -o bin_test/zelio_binary ./dev/src
+
+  release:
+    name: Release Build
+    runs-on: ubuntu-latest
+    needs: build  # Only runs if build passes
+    if: startsWith(github.ref, 'refs/tags/v')  # Only run on version tags
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Remove Logs and .git Folder
         run: |
-          go mod tidy
-          go mod download
+          find . -name "*.log" -type f -delete
+          rm -rf .git
+          echo "Logs and .git folder removed."
 
-      - name: Run lint
-        run: |
-          go install golang.org/x/lint/golint@latest
-          golint ./...
-
-      - name: Run vet
-        run: go vet ./...
-
-      - name: Run tests with coverage
-        run: go test ./... -v -coverprofile=coverage.out
-
-      - name: Upload coverage report
-        uses: codecov/codecov-action@v4
+      - name: Upload Release Binary
+        uses: softprops/action-gh-release@v2
         with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          file: ./coverage.out
-
-      - name: Build project
-        run: go build -v .
+          files: bin_test/zelio_binary
+          token: ${{ secrets.GITHUB_TOKEN }}
